--- a/index.html
+++ b/index.html
@@ -51,17 +51,32 @@
 		<!-- Introduciton -->
 		<section class="resume-section" id="introduction">
 			<div class="row">
+				<h1>Arisa Shinozuka.</h1>
+
 				<div class="col">
-					<h1>Arisa Shinozuka.</h1>
-					<h2>a potential software developer.</h2>
+					<h2>A potential software developer.</h2>
+					<img
+						src="img/software_engineer.svg" 
+						alt="image of software engineer"
+						width="450"
+					>
+
 					<div class="social-icons">
 						<a class="social-icon" href="https://github.com/alisazoo"><i class="fab fa-brands fa-github icon"></i></a>
 						<a class="social-icon" href="mailto:zooarisazoo@gmail.com"><i class="fas fa-envelope icon"></i></a>
 					</div>
 				</div>
 				<div class="col paragraph">
-						<p>Hi! I am a potential software developer, who loves to play with Java. I have a real passion for developing my skills and enjoy thinking to solve problems from a tiny maze to social issues.</p>
-						<p>In the near future, I would like to improve  working environment with technology, utilising my experience in the HR field and my knowledge from occupational psychology.</p>
+						<!-- <p>Hi! I am a potential software developer, who loves to play with Java. I have a real passion for developing my skills and enjoy thinking to solve problems from a tiny maze to social issues.</p>
+						<p>In the near future, I would like to improve  working environment with technology, utilising my experience in the HR field and my knowledge from occupational psychology.</p> -->
+						<ul class="intro-list">
+							<li>Java_lover</li>
+							<li>enthsiastic_about_solving_social_issues_w/tech</li>
+							<li>experience_of_content_planning&direction</li>
+							<li>HR_with_OrganisationalPsychology</li>
+							<li>CS@online_uni</li>
+							<li>Google_IT_Support_Professional_Certificate</li>
+						</ul>
 				</div>
 
 				<div class="chevron">
