--- a/jp/index.html
+++ b/jp/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="jp">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,13 +32,13 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 				<li class="nav-item">
-					<a class="nav-link" href="#project">PROJECTS</a>
+					<a class="nav-link" href="#project">プロジェクト</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#skills">SKILLS & EXPERIENCE</a>
+					<a class="nav-link" href="#skills">スキル＆経験</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="#education">EDUCATION & CERTIFICATE</a>
+					<a class="nav-link" href="#education">資格＆教育</a>
 				</li>
 			</ul>
 		</div>
@@ -51,21 +51,29 @@
 		<!-- Introduciton -->
 		<section class="resume-section" id="introduction">
 			<div class="row">
+				<h1>Arisa Shinozuka.</h1>
+				<h2>a potential software developer.</h2>
+
 				<div class="col">
-					<h1>Arisa Shinozuka.</h1>
-					<h2>a potential software developer.</h2>
+					<img 
+						src="../img/software_engineer.svg" 
+						alt="image of software engineer"
+						width="450"
+					>
+
 					<div class="social-icons">
 						<a class="social-icon" href="https://github.com/alisazoo"><i class="fab fa-brands fa-github icon"></i></a>
 						<a class="social-icon" href="mailto:zooarisazoo@gmail.com"><i class="fas fa-envelope icon"></i></a>
 						<a href="../index.html"><i class="bi bi-translate icon"></i></a>
 					</div>
 				</div>
+				
 				<div class="col paragraph">
 					<ul class="intro-list">
 						<li>Javaが好き</li>
-						<li>技術で課題解決できるエンジニアになりたい</li>
 						<li>制作企画・ディレクションの経験あり</li>
 						<li>組織心理学を学び、人事採用分野での経験あり</li>
+						<li>技術で課題解決できるエンジニアになりたい</li>
 						<li>コンピューター・サイエンス専攻＠オンライン大学</li>
 						<li>Google IT Support Professional Certificate</li>
 					</ul>
@@ -90,7 +98,7 @@
 			<div class="row">
 				<div class="col">
 
-					<h2>PROJECTS</h2>
+					<h2>プロジェクト</h2>
 
 					<div class="wrap">
 
@@ -110,8 +118,8 @@
 								</a>
 							</h3>
 							<h4 class="animate-text">
-								<a href="tdc.html">Tokyo Dome Calculator</a></h4>
-							<p class="animate-text">Are you familier with "Tokyo-dome-scale"?</p>
+								<a href="tdc.html">東京円蓋計算機</a></h4>
+							<p class="animate-text">広さを入力、東京ドーム何個分か分かります。</p>
 							</div>
 						</div>
 
@@ -128,7 +136,7 @@
 									<a href="moyogae.html">MYGE-Moyogae-</a></h4>
 								<p class="animate-text">
 									<a href="moyogae.html">
-										模様替えを手助け!
+										家具のサイズを入力して、模様替えのプランを練りましょう。
 									</a>
 								</p>
 								<!-- <a href="moyogae.html" class="animate-text">
@@ -160,7 +168,7 @@
 								</h3>
 								<h4 class="animate-text">
 									<a href="minitodolist.html">Mini Todo List</a></h4>
-								<p class="animate-text">You can focus on the tasks only today and tomorrow.</p>
+								<p class="animate-text">今日と明日だけのタスクが分かります。</p>
 							</div>
 						</div>
 						<!-- <div class="tile">
@@ -205,11 +213,11 @@
 		<section class="resume-section" id="skills">
 			<div class="row">
 				<div class="col">
-					<h2>SKILLS & EXPERIENCE</h2>
+					<h2>スキル＆経験</h2>
 					<div class="list-surround">
 						<ul>
 							<li>
-								More experience:
+								経験あり:
 								<i class="bi bi-star-fill"></i>
 								<i class="bi bi-star-fill"></i>
 								<i class="bi bi-star-fill"></i>
@@ -217,7 +225,7 @@
 								<i class="bi bi-star-fill"></i>
 							</li>
 							<li>
-								Less experience:
+								経験なし:
 								<i class="bi bi-star"></i>
 								<i class="bi bi-star"></i>
 								<i class="bi bi-star"></i>
@@ -230,7 +238,7 @@
 					<div class="row">
 						<div class="col">
 							<div class="skill-box">
-								<h3>Programming Language</h4>
+								<h3>プログラム言語</h4>
 								<ul>
 									<li>
 										Java:
@@ -259,7 +267,7 @@
 								</ul>
 							</div>
 							<div class="skill-box">
-								<h3>Framework</h4>
+								<h3>フレームワーク</h4>
 								<ul>
 									<li>
 										Spring Boot: 
@@ -280,7 +288,7 @@
 								</ul>
 							</div>
 							<div class="skill-box">
-								<h3>Database</h4>
+								<h3>データベース</h4>
 								<ul>
 									<li>
 										MySQL:
@@ -304,7 +312,7 @@
 						<div class="col right-column">
 							<div class="skill-box">
 
-								<h3>Server-side programming</h3>
+								<h3>サーバーサイド</h3>
 								<ul>
 									<li>Tomcat</li>
 									<li>JSP & Servlet</li>
@@ -312,13 +320,14 @@
 							</div>
 
 							<div class="skill-box">
-								<h3>Related knowledge</h3>
+								<h3>関連知識</h3>
 								<ul>
-									<li>Objective Oriented Programming</li>
-									<li>GUI Programming</li>
-									<li>MVC Model</li>
-									<li>Networking basics</li>
-									<li>Computer architecture</li>
+									<li>オブジェクト指向</li>
+									<li>GUI</li>
+									<li>MVCモデル</li>
+									<li>ネットワーク基礎</li>
+									<li>コンピューター・アーキテクチャ基礎</li>
+									<li>ITセキュリティー基礎</li>
 								</ul>
 							</div>
 						</div>
@@ -348,41 +357,37 @@
 				<!-- <h2>EDUCATION & CERTIFICATE</h2> -->
 
 					<div class="resume-section-content">
-						<h2 class="mb-5">EDUCATION & CERTIFICATE</h2>
+						<h2 class="mb-5">資格＆教育</h2>
 
 						<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
 							<div class="flex-grow-1">
 								<h3 class="mb-0">Google IT Support Professional Certificate</h3>
 								<div class="subheading mb-3">Google</div>
-								<p>Learnt the basics of:
 									<ul>
-										<li>Networking (e.g. TCP/IP, network protocols, Domain Name System)</li>
-										<li>Security (e.g. encryption algorithm, typical issues)</li>
-										<li>Cloud Computing</li>
-										<li>Linux commands</li> etc...
+										<li>ネットワーク (例 TCP/IP, ネットワーク・プロトコル, DNS等々)</li>
+										<li>セキュリティ (例 暗号・認証の仕組み、関連技術, よくある問題等)</li>
+										<li>クラウドコンピューティング</li>
+										<li>Linuxコマンド</li>等々…
 									</ul> 
-									
-								</p>
 							</div>
 							<div class="flex-shrink-0">
-								<span class="date">Decempber 2021 - January 2022</span>
+								<span class="date">2021/12 - 2022/1</span>
 							</div>
 						</div>
 
 						<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
 							<div class="flex-grow-1">
 								<h3 class="mb-0">University of People, US</h3>
-								<div class="subheading mb-3">Bachelor of Computer Science</div>
+								<div class="subheading mb-3">コンピューターサイエンス（学士）</div>
 								<!-- <p>GPA: 3.22</p> -->
-								<p>Studied the fundamentals of:
 									<ul>
-										<li>Programming</li>
-										<li>Assembly Language</li>
-										<li>Logic Circuits, etc.</li>
+										<li>プログラミングの基礎</li>
+										<li>アセンブリー言語</li>
+										<li>論理回路</li>
+										<li>ネットワーク基礎</li>等々…
 									</ul>
-								</p>
 							</div>
-							<div class="flex-shrink-0"><span class="date">June 2020 - Present</span></div>
+							<div class="flex-shrink-0"><span class="date">2020/6 - 現在</span></div>
 						</div>
 	
 						<!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
@@ -396,11 +401,11 @@
 	
 						<div class="d-flex flex-column flex-md-row justify-content-between  mb-5">
 							<div class="flex-grow-1">
-								<h3 class="mb-0">University of Tsuda, Japan</h3>
-								<div class="subheading mb-3">Bachelar of Liberal Arts</div>
-								<p>Joined Media Studies Couse: studied Media studies and create an original documentary about street art in Tokyo.</p>
+								<h3 class="mb-0">津田塾大学, 日本</h3>
+								<div class="subheading mb-3">リベラルアーツ（学士）</div>
+								<p>メディアスタディーズコースに在籍。批評理論や、ドキュメンタリー制作を行う。</p>
 							</div>
-							<div class="flex-shrink-0"><span class="date">April 2006 - March 2011</span></div>
+							<div class="flex-shrink-0"><span class="date">2006/4 - 2011/3</span></div>
 						</div>
 					</div>
 
