--- a/jp/minitodolist.html
+++ b/jp/minitodolist.html
@@ -33,13 +33,13 @@
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
 				<li class="nav-item">
-					<a class="nav-link" href="index.html#project">PROJECTS</a>
+					<a class="nav-link" href="index.html#project">プロジェクト</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="index.html#skills">SKILLS & EXPERIENCE</a>
+					<a class="nav-link" href="index.html#skills">スキル＆経験</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="index.html#education">EDUCATION & CERTIFICATE</a>
+					<a class="nav-link" href="index.html#education">資格＆教育</a>
 				</li>
 
 			</ul>
@@ -60,7 +60,7 @@
 						<svg xmlns="http://www.w3.org/2000/svg" width=0.3em height=0.3em fill="currentColor" class="bi bi-chevron-right icon-stamp" viewBox="0 0 16 16">
 							<path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
 						</svg>
-						<a href="index.html#project">Projects</a>
+						<a href="index.html#project">プロジェクト</a>
 						<svg xmlns="http://www.w3.org/2000/svg" width=0.3em height=0.3em fill="currentColor" class="bi bi-chevron-right icon-stamp" viewBox="0 0 16 16">
 							<path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
 						</svg> 
@@ -77,19 +77,19 @@
 				<div class="col">
 					<h1>Mini Todo List</h1>
 					<p>	
-						This todo list helps you to focus on only the tasks that you need to do today and tomorrow, although you can add the tasks in future. You can:
+						このWebアプリケーションは、今日と明日だけのタスク管理に特化しています。それ以降の予定の追加もできます。
 					</p>
 					<ul>
-						<li>Add new tasks and edit the existing tasks</li>
-						<li>Check the tasks you need to do only today or tommorow</li>
-						<li>Search the tasks</li>
-						<li>Register you as a user</li>
+						<li>新しいタスクの追加と、既存のタスクの編集</li>
+						<li>今日と明日が期限のタスクの絞り込み</li>
+						<li>タスク検索</li>
+						<li>ユーザー登録</li>
 					</ul>
 
 					<div class="d-flex justify-content-center">
 						<div class="bd-highlight flex-fill">
 							<button type="button" class="btn btn-outline-light">
-								<a href="https://github.com/alisazoo/miniTodoList" >code</a> <i class="fab fa-brands fa-github"></i>
+								<a href="https://github.com/alisazoo/miniTodoList" >コード</a> <i class="fab fa-brands fa-github"></i>
 							</button>
 						</div>
 
@@ -104,7 +104,7 @@
 						</div> -->
 						<div class="bd-highlight  flex-fill">
 							<button type="button" class="btn btn-outline-light">
-								<a href="#tdc-img" >app images</a> <i class="fas fa-image"></i>
+								<a href="#tdc-img" >参考イメージ</a> <i class="fas fa-image"></i>
 							</button>
 						</div>
 					</div>
@@ -113,25 +113,25 @@
 
 				<div class="row sub-row">
 					<div class="col">
-						<h2>TECHNOLOGY USED</h2>
+						<h2>技術</h2>
 						<ul>
-							<li>Language: Java 11</li>
-							<li>Database: MySQL 8.0.27</li>
-							<li>Server: Tomcat 9.0.54</li>
+							<li>言語: Java 11</li>
+							<li>データベース: MySQL 8.0.27</li>
+							<li>サーバー: Tomcat 9.0.54</li>
 							<!-- <li>PaaS: Haroku</li> -->
 							<li>VCS: git</li>
 							<li>IDE: IntelliJ</li>
 						</ul>
 					</div>
 					<div class="col">
-						<h2>TECH WRAP-UP</h2>
+						<h2>特徴・工夫した点など</h2>
 						<ul>
-							<li>Web application developped with JSP and Servlet (Tomcat)
+							<li>JSPとServlet (Tomcat)によるWebアプリケーション
 							</li>
 							<li>
-								Design and optimise database with utilising foreign key and SQL to search
+								SQLやフォーレインキーを活用したデータベースの設計
 							</li>
-							<li>Implemented with user registration and login function</li>
+							<li>ユーザー登録、ログイン機能の実装</li>
 						</ul>
 					</div>
 
@@ -161,7 +161,7 @@
 			<div id="tdc-img" class="row">
 			<div class="col">
 
-				<h2>App Images</h2>
+				<h2>参考イメージ</h2>
 
 				<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
 					<div class="carousel-indicators">
