--- a/jp/moyogae.html
+++ b/jp/moyogae.html
@@ -76,27 +76,20 @@
 
 				<div class="col">
 					<h1>MYGE</h1>
-					<h2 class="sub-title">a.k.a Moyo-gae</h2>
-					<cite>
-						"Moyo-gae" means changing interior arrangement in Japanese.
-					</cite>
+					<h2 class="sub-title">（模様替え）</h2>
 					<p>	
-						理想の模様替え作りを助けるスタンドアローン型のアプリケーションです。部屋や家具のサイズを登録して、自由に移動
-						部屋のサイズや家具を登録後、画面上で自由にものが動かして、理想の模様替えプランをお助け！
-
-						This application helps you to think about how to allocate the pieces of furniture in your room visually. You can:
+						理想の模様替え作りを助けるスタンドアローン型のアプリケーションです。部屋や家具のサイズを登録して、移動させられます。理想の模様替えをお助け！
 						<ul>
-							<li>Set the sizes of the floor</li>
-							<li>Add your items</li>
-							<li>Move your items freely (even rotate them!)</li>
-							<li>部屋の外に家具を置こうとすると、自動で部屋の中に置きなおしてくれる「自動配置調整機能」付き。</li>
+							<li>部屋の広さや家具のサイズの登録</li>
+							<li>画面上で家具を自由に移動 (回転させることもできます)</li>
+							<li>部屋の外に家具を置こうとすると、自動で部屋の中に置きなおしてくれる「自動配置調整機能」付き</li>
 						</ul>
 					</p>
 
 					<div class="d-flex justify-content-center">
 						<div class="bd-highlight flex-fill">
 							<button type="button" class="btn btn-outline-light">
-								<a href="https://github.com/alisazoo/MYGE" >code</a>
+								<a href="https://github.com/alisazoo/MYGE" >コード</a>
 								 <i class="fab fa-brands fa-github"></i>
 							</button>
 						</div>
@@ -114,7 +107,7 @@
 						</div> -->
 						<div class="bd-highlight  flex-fill">
 							<button type="button" class="btn btn-outline-light">
-								<a href="#myge-img" >app images</a> <i class="fas fa-image"></i>
+								<a href="#myge-img" >参考イメージ</a> <i class="fas fa-image"></i>
 							</button>
 						</div>
 					</div>
@@ -123,24 +116,24 @@
 
 				<div class="row sub-row">
 					<div class="col">
-						<h2>TECHNOLOGY USED</h2>			
+						<h2>技術</h2>
 						<ul>
-							<li>Language: Java</li>
+							<li>プログラミング言語: Java11</li>
 							<li>VCS: git</li>
 							<li>IDE: IntelliJ</li>
 						</ul>
 					</div>
 					<div class="col">
-						<h2>TECH WRAP-UP</h2>			
+						<h2>特徴・工夫した点など</h2>
 						<ul>
-							<li>Stand-alone app with GUI</li>
-							<li>Make this app from scratch, including the logic for:
+							<li>スタンドアローンアプリ</li>
+							<li>スクラッチから作成。以下のロジック部分含む：
 								<ul>
-									<li>calculating the corresponding size to fit in the floor area</li>
-									<li>handling the location (moving and rotating)</li>
+									<li>アプリ上の部屋の面積に応じて、家具のサイズを計算</li>
+									<li>マウスやドラッグで家具の移動機能を追加</li>
+									<li>家事の移動後に部屋をはみ出てしまう場合、自動で部屋の内部に合う場所に移動する機能を追加</li>
 								</ul>
 							</li>
-							<li>Used Object-oriented programming</li>
 						</ul>
 					</div>
 
@@ -170,7 +163,7 @@
 			<div id="myge-img" class="row">
 			<div class="col">
 
-				<h2>App Images</h2>
+				<h2>参考イメージ</h2>
 
 				<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
 					<div class="carousel-indicators">
@@ -233,7 +226,7 @@
 
 			</div>
 		</section>
-	
+
 	</div>
 	</div>
 
