--- a/jp/tdc.html
+++ b/jp/tdc.html
@@ -15,7 +15,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 	<link rel="stylesheet" href="../css/mycss.css">
 
-	<title>Tokyo Dome Calculator</title>
+	<title>東京円蓋計算機</title>
 </head>
 
 <body>
@@ -33,13 +33,13 @@
 			<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
 				<li class="nav-item">
-					<a class="nav-link" href="index.html#project">PROJECTS</a>
+					<a class="nav-link" href="index.html#project">プロジェクト</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="index.html#skills">SKILLS & EXPERIENCE</a>
+					<a class="nav-link" href="index.html#skills">スキル＆経験</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="index.html#education">EDUCATION & CERTIFICATE</a>
+					<a class="nav-link" href="index.html#education">資格＆教育</a>
 				</li>
 
 			</ul>
@@ -60,11 +60,11 @@
 						<svg xmlns="http://www.w3.org/2000/svg" width=0.3em height=0.3em fill="currentColor" class="bi bi-chevron-right icon-stamp" viewBox="0 0 16 16">
 							<path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
 						</svg>
-						<a href="index.html#project">Projects</a>
+						<a href="index.html#project">プロジェクト</a>
 						<svg xmlns="http://www.w3.org/2000/svg" width=0.3em height=0.3em fill="currentColor" class="bi bi-chevron-right icon-stamp" viewBox="0 0 16 16">
 							<path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
 						</svg> 
-						Tokyo Dome Calculator
+						東京円蓋計算機
 					</p>
 				</div>
 
@@ -75,21 +75,23 @@
 				</div>
 
 				<div class="col">
-					<h1>Tokyo Dome Calculator</h1>
-					<p>	
-						This web application helps you to know how large it is based on the size of the Tokyo dome, which is a sort of “standard scales” used in Japan.
+					<h1>東京円蓋計算機</h1>
+					<h2>東京ドーム何個分？</h2>
+
+					<p>
+						よく聞く「東京ドーム○個分」って、一体どれくらいの広さ？というよくある疑問を解決します。施設や場所の広さを入力すると自動で計算するWebアプリケーションです。
 					</p>
 
 					<div class="d-flex justify-content-center">
 						<div class="bd-highlight flex-fill">
 							<button type="button" class="btn btn-outline-light">
-								<a href="https://github.com/alisazoo/SimpleTokyoDomeCalculator" >code</a> <i class="fab fa-brands fa-github"></i>
+								<a href="https://github.com/alisazoo/SimpleTokyoDomeCalculator" >コード</a> <i class="fab fa-brands fa-github"></i>
 							</button>
 						</div>
 
 						<div class="bd-highlight flex-fill">
 							<button type="button" class="btn btn-outline-light">
-								<a href="https://simple-tokyodome-calc.herokuapp.com/place_list" >link</a> 
+								<a href="https://simple-tokyodome-calc.herokuapp.com/place_list" >リンク</a> 
 								<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
 									<path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>
 									<path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>
@@ -98,7 +100,7 @@
 						</div>
 						<div class="bd-highlight  flex-fill">
 							<button type="button" class="btn btn-outline-light">
-								<a href="#tdc-img" >app images</a> <i class="fas fa-image"></i>
+								<a href="#tdc-img" >参考イメージ</a> <i class="fas fa-image"></i>
 							</button>
 						</div>
 					</div>
@@ -107,29 +109,28 @@
 
 				<div class="row sub-row">
 					<div class="col">
-						<h2>TECHNOLOGY USED</h2>			
+						<h2>技術</h2>
 						<ul>
-							<li>Language: Java</li>
-							<li>Database: PostgreSQL</li>
+							<li>プログラム言語: Java</li>
+							<li>データベース: PostgreSQL</li>
 							<li>PaaS: Haroku</li>
 							<li>VCS: git</li>
 							<li>IDE: IntelliJ</li>
 						</ul>
 					</div>
 					<div class="col">
-						<h2>TECH WRAP-UP</h2>			
+						<h2>工夫した点など</h2>			
 						<ul>
-							<li>Implemented and customised Spring Boot Framwork
+							<li>Spring　Bootで作成
 								<ul>
-									<li>MVC frameworks</li>
+									<li>MVCフレームワーク</li>
 									<li>CRUD</li>
 								</ul>
 							</li>
 							<li>
-								Optimised database using PostgreSQL and Hibernate
+								PostgreSQL＆Hibernateを用いて、データベースを操作
 							</li>
-							<li>Deploy on Heroku</li>
-							<li>(not RESTful)</li>
+							<li>公開するためにHeroku上でデプロイ</li>
 						</ul>
 					</div>
 
@@ -159,7 +160,7 @@
 			<div id="tdc-img" class="row">
 			<div class="col">
 
-				<h2>App Images</h2>
+				<h2>参考イメージ</h2>
 
 				<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
 					<div class="carousel-indicators">
