Add link to another language ver.

--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
 
 					<div class="social-icons">
 						<a class="social-icon" href="https://github.com/alisazoo"><i class="fab fa-brands fa-github icon"></i></a>
-						<a class="social-icon" href="mailto:zooarisazoo@gmail.com"><i class="fas fa-envelope icon"></i></a>
+						<a class="social-icon" href="mailto:zooarisazoo@gmail.com">
+							<i class="fas fa-envelope icon"></i>
+						</a>
+						<a href="../jp/index.html" class="social-icon">日本語版</a>
 					</div>
 				</div>
 				<div class="col paragraph">
