--- a/jp/index.html
+++ b/jp/index.html
@@ -64,7 +64,7 @@
 					<div class="social-icons">
 						<a class="social-icon" href="https://github.com/alisazoo"><i class="fab fa-brands fa-github icon"></i></a>
 						<a class="social-icon" href="mailto:zooarisazoo@gmail.com"><i class="fas fa-envelope icon"></i></a>
-						<a href="../index.html"><i class="bi bi-translate icon"></i></a>
+						<a href="../index.html">English ver.<i class="bi bi-translate icon"></i></a>
 					</div>
 				</div>
 				
