fix the link and css for links to another index pg

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						<a class="social-icon" href="mailto:zooarisazoo@gmail.com">
 							<i class="fas fa-envelope icon"></i>
 						</a>
-						<a href="../jp/index.html" class="social-icon">日本語版</a>
+						<a href="./jp/index.html" class="social-icon">日本語版</a>
 					</div>
 				</div>
 				<div class="col paragraph">
