--- a/jp/minitodolist.html
+++ b/jp/minitodolist.html
@@ -85,6 +85,11 @@
 						<li>タスク検索</li>
 						<li>ユーザー登録</li>
 					</ul>
+					<h2>テストアカウント</h2>
+					<ul>
+						<li>ユーザー名: testuser</li>
+						<li>パスワード: testpass</li>
+					</ul>
 
 					<div class="d-flex justify-content-center">
 						<div class="bd-highlight flex-fill">
@@ -93,15 +98,15 @@
 							</button>
 						</div>
 
-						<!-- <div class="bd-highlight flex-fill">
+						<div class="bd-highlight flex-fill">
 							<button type="button" class="btn btn-outline-light">
-								<a href="https://simple-tokyodome-calc.herokuapp.com/place_list" >link</a> 
+								<a href="https://minitodolist23022022.herokuapp.com/" >link</a> 
 								<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
 									<path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>
 									<path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>
 								  </svg>
 							</button>
-						</div> -->
+						</div>
 						<div class="bd-highlight  flex-fill">
 							<button type="button" class="btn btn-outline-light">
 								<a href="#tdc-img" >参考イメージ</a> <i class="fas fa-image"></i>
