Add link to JP blog, and lines on each intro.

--- a/jp/index.html
+++ b/jp/index.html
@@ -51,8 +51,8 @@
 		<!-- Introduciton -->
 		<section class="resume-section" id="introduction">
 			<div class="row">
-				<h1>Arisa Shinozuka.</h1>
-				<h2>a potential software developer.</h2>
+				<h1 >Arisa Shinozuka</h1>
+				<h2 class="jp">IT未経験でも、突破力と柔軟性には自信あり</h2>
 
 				<div class="col">
 					<img 
@@ -64,18 +64,20 @@
 					<div class="social-icons">
 						<a class="social-icon" href="https://github.com/alisazoo"><i class="fab fa-brands fa-github icon"></i></a>
 						<a class="social-icon" href="mailto:zooarisazoo@gmail.com"><i class="fas fa-envelope icon"></i></a>
+						<a href="https://zenn.dev/asz"><i class="bi bi-journal-bookmark-fill icon"></i></a>
 						<a href="../index.html">English ver.<i class="bi bi-translate icon"></i></a>
 					</div>
 				</div>
-				
+
 				<div class="col paragraph">
 					<ul class="intro-list">
-						<li>Javaが好き</li>
+						<li>Javaが好き<i class="bi bi-heart"></i></li>
 						<li>制作企画・ディレクションの経験あり</li>
 						<li>組織心理学を学び、人事採用分野での経験あり</li>
 						<li>技術で課題解決できるエンジニアになりたい</li>
 						<li>コンピューター・サイエンス専攻＠オンライン大学</li>
-						<li>Google IT Support Professional Certificate</li>
+						<li>Google_IT_Support_Professional_Certificate</li>
+						<li>I<i class="bi bi-heart"></i>音楽_読書_ポッドキャスト_走る_地図なしで長距離散歩<i class="bi bi-heart-fill"></i></li>
 					</ul>
 					<!-- 私は技術で課題解決ができるITエンジニアを目指しており、現在はJavaをメインに日々プロジェクトを進めています。 将来は、制作企画や人事採用についての知識や経験を活かし、働き方の改善など、人々の生活をより良くしていける仕事に関わりたいと思っています。 -->
 				</div>
@@ -103,7 +105,6 @@
 					<div class="wrap">
 
 						<div class="tile">
-							<!-- <img src="../img/code-sq.jpg" alt=""> -->
 							<img src="../img/server_cluster.png" alt="">
 							<div class="text">
 							<h3>
