--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 						<!-- <p>Hi! I am a potential software developer, who loves to play with Java. I have a real passion for developing my skills and enjoy thinking to solve problems from a tiny maze to social issues.</p>
 						<p>In the near future, I would like to improve  working environment with technology, utilising my experience in the HR field and my knowledge from occupational psychology.</p> -->
 						<ul class="intro-list">
-							<li>Java_lover<i class="bi bi-heart"></i></li>
+							<li>Java_lover</li>
 							<li><i class="bi bi-activity"></i>enthsiastic_about_solving_social_issues_w/tech</li>
 							<li>experience_of_content_planning&direction</li>
 							<li>HR_with_OrganisationalPsychology</li>
 							<li>CS@online_uni</li>
 							<li>Google_IT_Support_Professional_Certificate</li>
-							<li>I<i class="bi bi-heart"></i>music_podcast_reading_running/long_walk_without_map<i class="bi bi-heart-fill"></i></li>
+							<li>I<i class="bi bi-heart"></i>music_podcast_reading_running/long_walk_without_map</li>
 						</ul>
 				</div>
 
