--- a/jp/index.html
+++ b/jp/index.html
@@ -71,13 +71,13 @@
 
 				<div class="col paragraph">
 					<ul class="intro-list">
-						<li>Javaが好き<i class="bi bi-heart"></i></li>
+						<li>Javaが好き</li>
 						<li>制作企画・ディレクションの経験あり</li>
 						<li>組織心理学を学び、人事採用分野での経験あり</li>
 						<li>技術で課題解決できるエンジニアになりたい</li>
 						<li>コンピューター・サイエンス専攻＠オンライン大学</li>
 						<li>Google_IT_Support_Professional_Certificate</li>
-						<li>I<i class="bi bi-heart"></i>音楽_読書_ポッドキャスト_走る_地図なしで長距離散歩<i class="bi bi-heart-fill"></i></li>
+						<li>I<i class="bi bi-heart"></i>音楽_読書_ポッドキャスト_走る_長距離散歩</i></li>
 					</ul>
 					<!-- 私は技術で課題解決ができるITエンジニアを目指しており、現在はJavaをメインに日々プロジェクトを進めています。 将来は、制作企画や人事採用についての知識や経験を活かし、働き方の改善など、人々の生活をより良くしていける仕事に関わりたいと思っています。 -->
 				</div>
