fix almost typo

--- a/jp/index.html
+++ b/jp/index.html
@@ -72,7 +72,7 @@
 				<div class="col paragraph">
 					<ul class="intro-list">
 						<li>Javaが好き</li>
-						<li>制作企画・ディレクションの経験あり</li>
+						<li>企画・ディレクションの経験あり</li>
 						<li>組織心理学を学び、人事採用分野での経験あり</li>
 						<li>技術で課題解決できるエンジニアになりたい</li>
 						<li>コンピューター・サイエンス専攻＠オンライン大学</li>
