--- a/jp/tdc.html
+++ b/jp/tdc.html
@@ -64,7 +64,7 @@
 						<svg xmlns="http://www.w3.org/2000/svg" width=0.3em height=0.3em fill="currentColor" class="bi bi-chevron-right icon-stamp" viewBox="0 0 16 16">
 							<path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
 						</svg> 
-						東京円蓋計算機
+						東京ドーム計算機
 					</p>
 				</div>
 
@@ -75,7 +75,7 @@
 				</div>
 
 				<div class="col">
-					<h1>東京円蓋計算機</h1>
+					<h1>東京ドーム計算機</h1>
 					<h2>東京ドーム何個分？</h2>
 
 					<p>
@@ -91,7 +91,7 @@
 
 						<div class="bd-highlight flex-fill">
 							<button type="button" class="btn btn-outline-light">
-								<a href="https://simple-tokyodome-calc.herokuapp.com/place_list" >リンク</a> 
+								<a href="https://simple-tokyodome-calc.herokuapp.com" >リンク</a> 
 								<svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
 									<path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>
 									<path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>
